--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --color-muted-teal: #9fb79d;
+  --color-muted-teal: #40503d;
   --color-mint-cream: #f6fdf8;
   --color-rosy-taupe: #ba9593;
   --color-carbon-black: #191919;
