--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -19,11 +19,11 @@ const faqs = [
     answer: "L'ostéopathie ne se résume pas au 'craquement' (techniques structurelles). J'adapte mes techniques à chaque patient (tissulaire, viscéral, crânien). Si une manipulation structurelle est nécessaire, elle est effectuée avec précision et douceur. Le bruit articulaire n'est pas synonyme d'efficacité et n'est pas douloureux."
   },
   {
-    question: "Comment habiller mon bébé pour la séance ?",
-    answer: "Prévoyez une tenue confortable et facile à enlever (body, pyjama). Pensez également à apporter son carnet de santé, un biberon si nécessaire, sa tétine et son doudou pour le rassurer."
+    question: "Qu'est-ce que l'approche somato-émotionnelle ?",
+    answer: "C'est une approche qui considère que certains blocages physiques sont liés à des émotions ou des stress vécus. En libérant les tensions corporelles (somato), on permet une meilleure circulation et une libération des charges émotionnelles associées pour un mieux-être durable."
   },
   {
-    question: "Quelle tenue porter pour une consultation adulte ?",
+    question: "Quelle tenue porter pour une consultation ?",
     answer: "Il est préférable de porter des sous-vêtements confortables ou une tenue de sport souple (legging, short) dans laquelle vous êtes à l'aise pour bouger."
   }
 ];
