--- a/src/pages/qui-suis-je.astro
+++ b/src/pages/qui-suis-je.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Qui suis-je ? - Cécile ROGER Ostéopathe Sion-les-Mines" description="Cécile ROGER, Ostéopathe D.O. diplômée de l'IORB. Formée en périnatalité et approche somato-émotionnelle. Découvrez mon parcours.">
+<Layout title="Qui suis-je ? - Cécile ROGER Ostéopathe Sion-les-Mines" description="Cécile ROGER, Ostéopathe D.O. diplômée de l'IORB. Spécialisée dans l'approche somato-émotionnelle pour libérer les tensions du corps et de l'esprit.">
     <div class="bg-mint-cream overflow-hidden">
         <div class="relative max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
             <div class="hidden lg:block bg-muted-teal/5 absolute top-0 bottom-0 left-3/4 w-screen"></div>
@@ -50,7 +50,7 @@ import Layout from '../layouts/Layout.astro';
                             Par exemple, l'ostéopathie peut soigner les maux de dos, les entorses, le stress, les règles douloureuses ou encore les migraines. L'ostéopathie est à visée préventive et curative.
                         </p>
                         <p>
-                            Je reçois différents types de patients au cabinet : des nourrissons, des enfants, des sportifs, des femmes enceintes ou encore des seniors.
+                            Je reçois différents types de patients au cabinet : des adultes, des adolescents, des sportifs ou encore des seniors, pour une prise en charge axée sur le lien entre le corps et les émotions.
                         </p>
                         <h3 class="text-xl font-bold text-carbon-black mt-6">Diplômes nationaux et universitaires</h3>
                         <ul role="list" class="mt-4 list-disc list-inside space-y-2">
