--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,8 +33,8 @@ import Layout from '../layouts/Layout.astro';
 			</div>
 		</div>
 		<div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-            <!-- Photo Relaxation / Bien-être -->
-			<img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Personne en séance de relaxation et bien-être" fetchpriority="high">
+            <!-- Photo Douceur -->
+			<img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://images.unsplash.com/photo-1519824145371-296894a0daa9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Mains d'ostéopathe tenant doucement les pieds d'un bébé" fetchpriority="high">
 		</div>
 	</div>
 
