--- a/src/pages/qui-suis-je.astro
+++ b/src/pages/qui-suis-je.astro
@@ -50,7 +50,7 @@ import Layout from '../layouts/Layout.astro';
                             Par exemple, l'ostéopathie peut soigner les maux de dos, les entorses, le stress, les règles douloureuses ou encore les migraines. L'ostéopathie est à visée préventive et curative.
                         </p>
                         <p>
-                            Je reçois différents types de patients au cabinet : des adultes, des adolescents, des sportifs ou encore des seniors, pour une prise en charge axée sur le lien entre le corps et les émotions.
+                            Je reçois différents types de patients au cabinet : des nourrissons, des enfants, des adolescents, des adultes, des femmes enceintes, des sportifs ou encore des seniors.
                         </p>
                         <h3 class="text-xl font-bold text-carbon-black mt-6">Diplômes nationaux et universitaires</h3>
                         <ul role="list" class="mt-4 list-disc list-inside space-y-2">
