feat(hours): update opening hours to 9h-19h continuous

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,7 +46,7 @@ const currentYear = new Date().getFullYear();
         <ul class="mt-4 space-y-2 text-base">
             <li class="flex justify-between">
                 <span class="font-medium">Lun - Ven :</span>
-                <span>9h - 13h / 14h - 19h</span>
+                <span>9h - 19h</span>
             </li>
             <li class="flex justify-between text-graphite/80">
                 <span>Sam - Dim :</span>
